@@ -22,6 +22,11 @@ KeepInstalledSection=translations
 RemoveObsoletes=yes
 ForcedObsoletes=esound, esound-common, slocate, ksplash-engine-moodin
 
+[KernelRemoval]
+Version=2.6.27
+BaseNames=linux-image,linux-headers,linux-image-debug
+Types=386,generic,rt,server,virtual
+
 # information about the individual meta-pkgs
 [ubuntu-desktop]
 KeyDependencies=gdm, usplash-theme-ubuntu, ubuntu-artwork, ubuntu-sounds
