@@ -995,6 +995,8 @@ class DistUpgradeController(object):
         for pkg in self.config.getlist("Distro","MetaPkgs"):
             if self.cache.has_key(pkg) and self.cache[pkg].isInstalled:
                 self.forced_obsoletes.extend(self.config.getlist(pkg,"ForcedObsoletes"))
+        # now add the obsolete kernels to the forced obsoletes
+        self.forced_obsoletes.extend(self.cache.identifyObsoleteKernels())
         logging.debug("forced_obsoletes: %s", self.forced_obsoletes)
 
         # mark packages that are now obsolete (and where not obsolete
