@@ -3,6 +3,10 @@ update-manager (1:0.93.16) intrepid; urgency=low
   * DistUpgrade/DistUpgradeController.py:
     - automatically add "relatime" to the mount options
       of ext2/ext3
+  * DistUpgrade/DistUpgradeCache.py:
+    - fix the removal of obsolete kernel packages when the 
+      old kernel abi package gets removed from -update and/or
+      -security
 
  --
 
